# moveit_robots

./: .travis.yml
moveit_robot_test/: CMakeLists.txt  package.xml
moveit_robot_test/test/: test_moveit.py
